<resources>
    <string name="app_name">आगमान्वेषिणी - AgamAnvEShiNI</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_results">Search results</string>
    <string name="title_activity_settings">आगमान्वेषिणी - Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_recent_items">Recently viewed</string>
    <string name="title_activity_bookmarks">Bookmarks</string>
    <string name="title_activity_table_of_contents">Table of contents</string>
    <string name="action_random_doc">Random quote</string>
    <string name="accurate_substring_search">Accurate Search(slower)</string>
    <string name="download_content_message">You don\'t have any granthas downloaded.\nPlease download granthas by tapping\n\"Download or Update Granthas (Texts)\"\noption in the Settings page</string>
    <string name="permission_denied">No permission</string>
    <string name="no_results_found">No results found</string>
    <string name="action_bookmark">Add bookmark</string>
    <string name="action_bookmark_add">Add bookmark</string>
    <string name="action_bookmark_delete">Delete bookmark</string>
    <string name="action_copy">Copy</string>
    <string name="search_in_this_folder">Search in this folder</string>
    <string name="search_in_folder_subtitle">In: %s</string>
    <string name="action_verse_nav">Go to verse</string>
    <string name="verse_nav_title">Go to verse — %s</string>
    <string name="toc_search_hint">Search documents…</string>
    <string name="toc_search_no_results">No matching documents</string>

    <!-- Bookmarks grouping -->
    <string name="bookmark_rename">Rename</string>
    <string name="bookmark_assign_groups">Assign groups</string>
    <string name="bookmark_share">Share link</string>
    <string name="bookmark_delete">Delete</string>
    <string name="group_rename">Rename group</string>
    <string name="group_delete">Delete group</string>
    <string name="group_new">New group</string>
    <string name="bookmarks_filter_all">All</string>
    <string name="bookmark_rename_hint">Bookmark name</string>
    <string name="group_rename_hint">Group name</string>
    <string name="bookmark_no_groups">No groups</string>
    <string name="bookmark_no_groups_hint">No groups yet. Tap \"New Group\" to create one.</string>
    <string name="bookmark_groups_skip">Skip</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General Settings</string>
    <string name="pref_header_general_summary">General settings include changing text script to ITRANS, देवनागरी, ಕನ್ನಡ or తెలుగు etc</string>

    <string name="pref_title_preferred_output_script">Change text script to ITRANS, देवनागरी, ಕನ್ನಡ or తెలుగు etc</string>
    <string name="pref_description_preferred_output_script">You can change the script to ITrans, deva nagari, or kannada
    </string>
    <string name="remove_unused_from_index">Remove unused files from index</string>
    <string name="pref_num_of_adjacent_docs_to_copy">Number of items to copy when using the "Copy" option</string>

    <string-array name="pref_preferred_output_script_list_titles">
        <item>ITRANS</item>
        <item>देवनागरी</item>
        <item>ಕನ್ನಡ</item>
        <item>తెలుగు</item>
    </string-array>
    <string-array name="pref_preferred_output_script_list_values">
        <item>ITRANS</item>
        <item>DEVANAGARI</item>
        <item>KANNADA</item>
        <item>TELUGU</item>
    </string-array>

    <string-array name="drawer_options_array">
        <item>Settings/Downloads</item>
        <item>Help</item>
        <item>Recently viewed</item>
        <item>Bookmarks</item>
        <item>Table Of Contents</item>
        <!--<item>About</item>-->
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="pref_header_index_catalogue">Download or Update Granthas (Texts)</string>
    <string name="pref_header_index_catalogue_summary">Tap on this option to download the latest Granthas (Texts) such as Vedas, Puranas etc</string>

    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="learn_more">Learn More</string>
    <string name="cancel">Cancel</string>
    <string name="size">Size: </string>
    <string name="uptodate">Upto date</string>
    <string name="downloaded">downloaded</string>
    <string name="alert">Alert</string>
    <string name="included_files">Included files</string>
    <string name="no_internet_message">Unable to connect to internet.</string>
    <string name="please_wait">Please wait...</string>

    <!-- Example settings for Data & Sync -->
    <!--<string name="pref_header_data_sync">Data &amp; sync</string>-->

    <!--<string name="pref_title_sync_frequency">Sync frequency</string>-->
    <!--<string-array name="pref_sync_frequency_titles">-->
    <!--<item>15 minutes</item>-->
    <!--<item>30 minutes</item>-->
    <!--<item>1 hour</item>-->
    <!--<item>3 hours</item>-->
    <!--<item>6 hours</item>-->
    <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_sync_frequency_values">-->
    <!--<item>15</item>-->
    <!--<item>30</item>-->
    <!--<item>60</item>-->
    <!--<item>180</item>-->
    <!--<item>360</item>-->
    <!--<item>-1</item>-->
    <!--</string-array>-->

    <!--<string-array name="list_preference_entries">-->
    <!--<item>Entry 1</item>-->
    <!--<item>Entry 2</item>-->
    <!--<item>Entry 3</item>-->
    <!--</string-array>-->

    <!--<string-array name="list_preference_entry_values">-->
    <!--<item>1</item>-->
    <!--<item>2</item>-->
    <!--<item>3</item>-->
    <!--</string-array>-->

    <!--<string-array name="multi_select_list_preference_default_value" />-->

    <!--<string name="pref_title_system_sync_settings">System sync settings</string>-->

    <!--&lt;!&ndash; Example settings for Notifications &ndash;&gt;-->
    <!--<string name="pref_header_notifications">Notifications</string>-->

    <!--<string name="pref_title_new_message_notifications">New message notifications</string>-->

    <!--<string name="pref_title_ringtone">Ringtone</string>-->
    <!--<string name="pref_ringtone_silent">Silent</string>-->

    <!--<string name="pref_title_vibrate">Vibrate</string>-->
</resources>
