<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.jaya.android.SearchableActivity" >
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search_label"/>

    <item
        android:id="@+id/action_random_doc"
        android:icon="@drawable/ic_random_doc"
        android:title="@string/action_random_doc"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/accurate_substring_search"
        android:checkable="true"
        android:icon="@drawable/ic_random_doc"
        android:title="@string/accurate_substring_search"
        app:showAsAction="ifRoom"
        android:visible="true"/>
</menu>
