<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:text="TextView"
        android:layout_height="wrap_content"
        android:id="@+id/index_catalogue_item_name"
        android:layout_width="match_parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
            <TextView
                android:text="@string/size"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:text="TextView"
                android:layout_height="wrap_content"
                android:id="@+id/index_catalogue_item_size"
                android:layout_width="match_parent" />

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/progressBarIndexCatalogueItem"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_height="30dp"
                android:id="@+id/index_catalogue_item_bytes_downloaded"
                android:layout_width="wrap_content" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnIndexCatalogueItemInfo"
            style="@android:style/Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingRight="5dp"
            android:text="@string/learn_more"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btnIndexCatalogueItemRemove"
            style="@android:style/Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingRight="5dp"
            android:text="@string/remove"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btnIndexCatalogueDownloadOrUpdate"
            style="@android:style/Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingRight="5dp"
            android:text="@string/download"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btnIndexCatalogueItemOpen"
            style="@android:style/Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingRight="5dp"
            android:text="@string/open"
            android:textSize="12dp" />
    </LinearLayout>
</LinearLayout>